--- a/use_cases.tex
+++ b/use_cases.tex
@@ -13,7 +13,7 @@ Quantitative probabilities for natural catastrophic events such as tornado, hail
 
 In terms of offering frequency, climate phenomena that drive extreme weather events such as El Niño or La Niña only change over a period of weeks to months, making it unnecessary to generate results more frequently. The \gls{soi} data set, updated monthly by the Australian Bureau of Meteorology, is useful in predictive climate analytics in general and is a good baseline frequency for future ClimatEdge\index{ClimatEdge} offerings. While specific customers may or may not require monthly analytics feeds, the methods will be in place to generate them at that frequency. Although the results generally would not be substantially different, it would be technically possible to run the computations on-demand.
 \subsection{Big Data}
-In a guest \gls{acm} \index{ACM} blog post, Michael Stonebraker gives four detailed definitions for the term big data\index{big data} \cite{stonebraker}.  Big data is classified as having one of the following attributes: velocity, volume, or variety.  Velocity describes the frequency at which data is expected to arrive, either pushed or pulled. Volume is simply the size of the data sets to be ingested, stored, and processed. Variety describes the various heterogeneous sources and formats which comprise the data set. A big data label can therefore be applied to a data set having  one or more of these attributes.\\
+In a guest \gls{acm}\index{ACM} blog post, Michael Stonebraker gives four detailed definitions for the term big data\index{big data} \cite{stonebraker}. Big data is classified as having one of the following attributes: velocity, volume, or variety. Velocity describes the frequency at which data is expected to arrive, either pushed or pulled. Volume is simply the size of the data sets to be ingested, stored, and processed. Variety describes the various heterogeneous sources and formats which comprise the data set. A big data label can therefore be applied to a data set having  one or more of these attributes.\\
 
 The initial input data sets for tornado comprise the following \cite{walker}:
 \begin{itemize}
@@ -54,10 +54,10 @@ As seen in table \ref{qualifiers}, the flood analytic ingests a larger and wider
     \label{qualifiers}
 \end{table}
 \subsection{Velocity, Volume, and Variety}
-The speed at which sets are processed and stored varies with respect to the particular data. Some data sets are generated daily, e.g. \gls{merra}, some are generated monthly, e.g. \gls{soi}, and some require daily parsing, e.g. newspapers, Twitter\index{Twitter}, or other social media. Although the velocity of incoming data varies by type, it is expected that the output analytics for both tornado and flood are generated monthly on a fixed schedule as determined by the specific customer. If a month's worth of data can be pre-processed in a timely manner, there is no reason to move to daily ingestion. Tests were performed on one month of  \gls{merra} (representative of a larger data feed) and shownn that on a single 3GHz core, it takes approximately thirty five minutes to parse and store the data, exclusive of retrieval time. It is not expected that monthly retrieval of the structured data sets will present a problem. The unstructured data sets will need to be gathered on a daily or semi-daily basis in order to stay current. If not retrieved in a timely manner, there is risk of the data disappearing or time spent processing weekly or monthly bulk loads will prove to be prohibitive.\\
+The speed at which sets are processed and stored varies with respect to the particular data. Some data sets are generated daily, e.g. \gls{merra}, some are generated monthly, e.g. \gls{soi}, and some require daily parsing, e.g. newspapers, Twitter\index{Twitter}, or other social media. Although the velocity of incoming data varies by type, it is expected that the output analytics for both tornado and flood are generated monthly on a fixed schedule as determined by the specific customer. If a month's worth of data can be pre-processed in a timely manner, there is no reason to move to daily ingestion. Tests were performed on one month of  \gls{merra} (representative of a larger data feed) and shown that on a single 3GHz core, it takes approximately thirty five minutes to parse and store the data, exclusive of retrieval time. It is not expected that monthly retrieval of the structured data sets will present a problem. The unstructured data sets will need to be gathered on a daily or semi-daily basis in order to stay current. If not retrieved in a timely manner, there is risk of the data disappearing or time spent processing weekly or monthly bulk loads will prove to be prohibitive.\\
 
 It is possible to store all the necessary data required for the tornado analytic on a 1U server with several one terabyte drives. Many home computers also fall into this category. In contrast, if we configured four drives of four terabytes each in a 1U server, we would require sixty-four servers  (or 1.5 standard racks) to store one petabyte worth of flood related data. Replicating the data for a high availability production environment can add a factor of two or three to these estimates. Clearly, flood data requires capacity that is orders of magnitude greater than that of the tornado data. An important point to take note of, is that the persistent storage of data after pre-processing could be significantly less than what is needed to process it. For example, \gls{merra} files are typically 100 to 300 MB in size, depending on whether they are two or three dimensional. These data files contain variables that may or may not be useful in specific offerings. It is possible that out of over thirty variables, only two or three would actually be used which dramatically reduces the amount of persistent data stored and indexed. The data parsers would know which data they need to permanently store and discard the rest. For this reason, it is crucial that the storage used for pre-processing be elastic to save on costs.\\
 
 Between the tornado and flood data, there are nine separate data sets that need to be pre-processed and stored. While the technology and approach to extracting and storing relevant information from each data is similar, they are still distinct processes that must be developed individually. All four data sets for the tornado analytic are structured with well defined approaches for extracting the required data. The flood analytic also contains several data sets that are well structured and do not present any significant challenges to data extraction on a continual basis. Contained within the flood analytic, is the unstructured newspaper and associated social media data related to flood reports and damage. This will require a significantly different parsing technology than the structured data and will be the most challenging to develop, implement, and refine.\\
 
-The flood analytic requires data sets with different attributes than that of tornado. The real-time nature of newspaper articles and other social media requires daily or semi-daily ingestion in order to possibly assist with the compilation of a database of worldwide flood claims. Significant flooding in a key geographic region may require a quicker than usual delivery of the associated analytics. This information will be reported first by the media in near real-time and not seen in the structured feeds until the end of the month. The additional data sets required by the global and domestic flood offering surpass that of tornado by many times. The same storage technology, but not necessarily the same platform, will work for both offerings at different scales. Tornado data is well structured, while flood data is both structured and unstructured. Different algorithms, involving semantic and natural language processing are necessary to effectively parse the variety of feeds associated with flood reporting by the media.  The attributes shown by the flood data sets map very well to the accepted criteria of big data, while tornado does not. The technology necessary to produce accurate flood analytics is more complex than tornado and at scale.  The expertise developed by building a platform framework capable of generating analytics on both structured and unstructured data will naturally transfer to the next ClimatEdge\index{ClimatEdge} offering, as well as other big data\index{big data} projects.
+The flood analytic requires data sets with different attributes than that of tornado. The real-time nature of newspaper articles and other social media requires daily or semi-daily ingestion in order to possibly assist with the compilation of a database of worldwide flood claims. Significant flooding in a key geographic region may require a quicker than usual delivery of the associated analytics. This information will be reported first by the media in near real-time and not seen in the structured feeds until the end of the month. The additional data sets required by the global and domestic flood offering surpass that of tornado by many times. The same storage technology, but not necessarily the same platform, will work for both offerings at different scales. Tornado data is well structured, while flood data is both structured and unstructured. Different algorithms, involving semantic and natural language processing are necessary to effectively parse the variety of feeds associated with flood reporting by the media.  The attributes shown by the flood data sets map very well to the accepted criteria of big data, while tornado does not. The technology necessary to produce accurate flood analytics is more complex than tornado and at scale. The expertise developed by building a platform framework capable of generating analytics on both structured and unstructured data will naturally transfer to the next ClimatEdge\index{ClimatEdge} offering, as well as other big data\index{big data} projects.
